force-app/main/default/objects/Legal_Checklist__c/Legal_Checklist__c.object-meta.xml
<CustomObject>
    <label>Legal Checklist</label>
    <nameField>
        <label>Legal Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>