force-app/main/default/objects/Legal_Checklist__c/fields/HPRM_Ref__c.field-meta.xml
<CustomField>
    <fullName>HPRM_Ref__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_TRIM_File_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HPRM Ref</label>
    <type>Text</type>
</CustomField>