force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_ABN__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ABN__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Organisation__r.I_RS_ABN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN</label>
    <type>Text</type>
</CustomField>