force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_address_for_notices_EDRO_or_PVC_IE__c.field-meta.xml
<CustomField>
    <fullName>I_RS_address_for_notices_EDRO_or_PVC_IE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address For Notices (EDRO or PVC(IE))</label>
    <type>Checkbox</type>
</CustomField>