force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Agreement_Term__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Agreement_Term__c</fullName>
    <formula>ABS(YEAR(I_RS_Agreement_Title__r.I_RS_Contract_End_Date__c ) - YEAR(I_RS_Agreement_Title__r.I_RS_Contract_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>