force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Agreement_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Agreement_Title__c</fullName>
    <label>Agreement Title</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Legal Checklists</relationshipLabel>
    <relationshipName>Legal_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>