force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_all_attachments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_all_attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All attachments collected and attached</inlineHelpText>
    <label>All Attachments Collected And Attached</label>
    <type>Checkbox</type>
</CustomField>