force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_all_parties__c.field-meta.xml
<CustomField>
    <fullName>I_RS_all_parties__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All parties (incl. full legal name, ABN, address)</inlineHelpText>
    <label>All Parties</label>
    <type>Checkbox</type>
</CustomField>