force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_amounts_and_payment_times_for__c.field-meta.xml
<CustomField>
    <fullName>I_RS_amounts_and_payment_times_for__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Amounts and payment times for all parties</inlineHelpText>
    <label>Amounts And Payment Times For Parties</label>
    <type>Checkbox</type>
</CustomField>