force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Are_all_of_the_following_matters__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Are_all_of_the_following_matters__c</fullName>
    <inlineHelpText>Are all of the following matters acceptable to LTU and the researcher(s)?</inlineHelpText>
    <label>Are All The Following Acceptable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No-seeking advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>