force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Areall_details_set_out_accurate_and__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Areall_details_set_out_accurate_and__c</fullName>
    <inlineHelpText>Are all details set out accurate and acceptable to LTU and the researcher(s)</inlineHelpText>
    <label>Are All Details Set Out Accurate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-all checked below</fullName>
            </value>
            <value>
                <fullName>No-advice required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>