force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Assets_to_be_purchased__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assets_to_be_purchased__c</fullName>
    <label>Assets To Be purchased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-LTU to own</fullName>
            </value>
            <value>
                <fullName>Yes-other party to own</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>