force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_b_Details_of_patent_materials_other__c.field-meta.xml
<CustomField>
    <fullName>I_RS_b_Details_of_patent_materials_other__c</fullName>
    <defaultValue>&quot;Details of patent, materials, other IP, queries, amendments&quot;</defaultValue>
    <label>(b) Details</label>
    <type>TextArea</type>
</CustomField>