force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Background_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Background_IP__c</fullName>
    <label>Background IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>