force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Cash__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cash__c</fullName>
    <label>Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>