force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Clinical_trial__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Clinical_trial__c</fullName>
    <label>Clinical Trial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involved</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>