force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Commercialisation_of_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Commercialisation_of_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercialisation Of IP</label>
    <type>Checkbox</type>
</CustomField>