force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Completed_project_and_party_details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Completed_project_and_party_details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed project and party details in Schedule attached</description>
    <inlineHelpText>Completed project and party details in Schedule attached</inlineHelpText>
    <label>Completed Project And Party Details</label>
    <type>Checkbox</type>
</CustomField>