force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Completion_Date__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>