force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confidentiality__c</fullName>
    <label>Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LTU info to be disclosed-protections acceptable</fullName>
            </value>
            <value>
                <fullName>LTU receiving info-clauses acceptable</fullName>
            </value>
            <value>
                <fullName>Mutual disclosure/obligations-clauses acceptable</fullName>
            </value>
            <value>
                <fullName>Advice or amendments required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>