force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Conflict_of_interest__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conflict_of_interest__c</fullName>
    <label>Conflict Of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None to disclose</fullName>
                <default>true</default>
                <label>None to disclose</label>
            </value>
            <value>
                <fullName>Potential-LTU CoI Procedure &amp; any CoI clause followed</fullName>
            </value>
            <value>
                <fullName>Potential-seeking advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>