force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Consulted_Research_Contracts_Guide__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Consulted_Research_Contracts_Guide__c</fullName>
    <label>Consulted Research Contracts Guide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>