force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Contract_research_consultancy__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_research_consultancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Research/Consultancy</label>
    <type>Checkbox</type>
</CustomField>