force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Contract_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_type__c</fullName>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>