force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Date_Prepared__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Prepared__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Prepared</label>
    <type>Date</type>
</CustomField>