force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Deliverables_and_reporting__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Deliverables_and_reporting__c</fullName>
    <label>Deliverables And Reporting Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>