force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_deliverables_milestones_accurate__c.field-meta.xml
<CustomField>
    <fullName>I_RS_deliverables_milestones_accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deliverables/milestones accurate, achievable</inlineHelpText>
    <label>Deliverables/Milestones Accurate</label>
    <type>Checkbox</type>
</CustomField>