force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Assets__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Assets__c</fullName>
    <label>Assets To Be purchased - Details</label>
    <type>TextArea</type>
</CustomField>