force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Clinical_Trial__c</fullName>
    <label>Clinical Trial - Details</label>
    <type>TextArea</type>
</CustomField>