force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Confidentiality__c</fullName>
    <defaultValue>&quot;Enter details or changes&quot;</defaultValue>
    <label>Confidentiality - Details</label>
    <type>TextArea</type>
</CustomField>