force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Conflict_of_interest__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Conflict_of_interest__c</fullName>
    <defaultValue>&quot;Enter details incl. approvals&quot;</defaultValue>
    <label>Conflict Of Interest - Details</label>
    <type>TextArea</type>
</CustomField>