force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Document_Section__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Document_Section__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>