force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Ethics__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Ethics__c</fullName>
    <label>Ethics - Details</label>
    <type>TextArea</type>
</CustomField>