force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_honorary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_honorary__c</fullName>
    <label>Honorary/Visiting Researchers - Details</label>
    <type>TextArea</type>
</CustomField>