force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Licences_to_LTU__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Licences_to_LTU__c</fullName>
    <defaultValue>&quot;Enter details or changes&quot;</defaultValue>
    <label>Licences to LTU - Details</label>
    <type>TextArea</type>
</CustomField>