force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Licences_to_other__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Licences_to_other__c</fullName>
    <defaultValue>&quot;Enter query or special requirements&quot;</defaultValue>
    <label>Licences To Other Party/ies - Details</label>
    <type>TextArea</type>
</CustomField>