force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_ltu_partners__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_ltu_partners__c</fullName>
    <label>LTU Partners - Details</label>
    <type>TextArea</type>
</CustomField>