force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Materials_Transfer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Materials_Transfer__c</fullName>
    <label>Materials/Equipment Transfer - Details</label>
    <type>TextArea</type>
</CustomField>