force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_NA__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_NA__c</fullName>
    <defaultValue>&quot;Enter details&quot;</defaultValue>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>