force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_of_existing_LTU_IP_to_be__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_of_existing_LTU_IP_to_be__c</fullName>
    <defaultValue>&quot;Details of existing LTU IP to be used in project&quot;</defaultValue>
    <label>Existing/Background IP Of LTU - Details</label>
    <type>TextArea</type>
</CustomField>