force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_of_third_party_IP_to_be__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_of_third_party_IP_to_be__c</fullName>
    <defaultValue>&quot;Details of third party IP to be used in project&quot;</defaultValue>
    <label>Third Party IP - Details</label>
    <type>TextArea</type>
</CustomField>