force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Other_Approvals__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Other_Approvals__c</fullName>
    <label>Other Approvals Obtained - Details</label>
    <type>TextArea</type>
</CustomField>