force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_overseas__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_overseas__c</fullName>
    <label>Overseas Institutions - Details</label>
    <type>TextArea</type>
</CustomField>