force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_overseas_travel__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_overseas_travel__c</fullName>
    <label>Overseas Services/Travel - Details</label>
    <type>TextArea</type>
</CustomField>