force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Personal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Personal__c</fullName>
    <label>Personal/Sensitive Information - Details</label>
    <type>TextArea</type>
</CustomField>