force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Placement__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Placement__c</fullName>
    <label>LTU Student Placements - Details</label>
    <type>TextArea</type>
</CustomField>