force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Related_Agreement__c</fullName>
    <label>Related Agreements - Details</label>
    <type>TextArea</type>
</CustomField>