force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Researchers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Researchers__c</fullName>
    <label>LTU Student Researchers - Details</label>
    <type>TextArea</type>
</CustomField>