force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_subcontracts__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_subcontracts__c</fullName>
    <defaultValue>&quot;E.g. services, collaborators, volunteers, other external involvement&quot;</defaultValue>
    <label>Subcontracts - Details</label>
    <type>TextArea</type>
</CustomField>