force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_teaching_services__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_teaching_services__c</fullName>
    <label>Teaching Services - Details</label>
    <type>TextArea</type>
</CustomField>