force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Details_Vulnerable__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Details_Vulnerable__c</fullName>
    <label>Vulnerable Persons - Details</label>
    <type>TextArea</type>
</CustomField>