force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Draft_contract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Draft_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Contract</label>
    <type>Checkbox</type>
</CustomField>