force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Email__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_Lead_Chief_Investigator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>