force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Equipment_and_materials__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Equipment_and_materials__c</fullName>
    <label>Equipment and Materials</label>
    <type>TextArea</type>
</CustomField>