force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Ethics__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics__c</fullName>
    <label>Ethics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>