force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Existing_background_IP_of_LTU__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Existing_background_IP_of_LTU__c</fullName>
    <label>Existing/Background IP Of LTU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None to be used</fullName>
            </value>
            <value>
                <fullName>Yes-LTU IP to be used-no commercial value-licences/warranties acceptable</fullName>
            </value>
            <value>
                <fullName>Yes-LTU IP to be used-no commercial value-advice or changes required</fullName>
            </value>
            <value>
                <fullName>Yes-LTU IP to be used-potentially valuable-refer Commercialisation below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>