force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Full_Legal_Name__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Legal Name</label>
    <type>Text</type>
</CustomField>