force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Head_agreement__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Head_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head Agreement</label>
    <type>Checkbox</type>
</CustomField>