force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_HPRM_Ref__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HPRM_Ref__c</fullName>
    <label>HPRM Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>