force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_no__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_no__c</fullName>
    <label>If No</label>
    <type>TextArea</type>
</CustomField>