force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_a_potentially__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_a_potentially__c</fullName>
    <label>If Yes: (a)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Potentially_valuable_IP__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commercialisation Office recommendation-add details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>