force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_ltu_honorary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_ltu_honorary__c</fullName>
    <label>If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_LTU_honorary_visiting_researchers__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Honorary Researcher Deed signed</fullName>
            </value>
            <value>
                <fullName>Honorary Researcher Deed pending</fullName>
            </value>
            <value>
                <fullName>Honorary is ONJCRI staff</fullName>
            </value>
            <value>
                <fullName>Advice required (give details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>