force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_LTU_Students_Researchers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_LTU_Students_Researchers__c</fullName>
    <label>If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_LTU_student_researchers__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Student Researcher Deed signed</fullName>
            </value>
            <value>
                <fullName>Student Researcher Deed pending</fullName>
            </value>
            <value>
                <fullName>Student is party to this contract</fullName>
            </value>
            <value>
                <fullName>Advice required (give details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>