force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_overseas__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_overseas__c</fullName>
    <label>If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Overseas_institutions__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>La Trobe International notified</fullName>
            </value>
            <value>
                <fullName>LTU will be notified</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>