force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_student_placements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_student_placements__c</fullName>
    <label>If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_LTU_student_placements__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes-APVC Academic Partnerships of College notified</fullName>
            </value>
            <value>
                <fullName>Yes-Not applicable (explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>