force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_If_yes_teaching_services__c.field-meta.xml
<CustomField>
    <fullName>I_RS_If_yes_teaching_services__c</fullName>
    <label>If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Teaching_services__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Educational Parternships &amp; Quality notified</fullName>
            </value>
            <value>
                <fullName>Yes-Not applicable (explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>