force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Instructing_Officer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Instructing_Officer__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Research_Office_Contact__r.FirstName &amp; &quot; &quot; &amp; I_RS_Agreement_Title__r.I_RS_Research_Office_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructing Officer</label>
    <type>Text</type>
</CustomField>