force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_investigator_details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_investigator_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investigator Details</label>
    <type>Checkbox</type>
</CustomField>