force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Joint_appointment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Joint_appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Appointment</label>
    <type>Checkbox</type>
</CustomField>