force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LEG_ref_if_any__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LEG_ref_if_any__c</fullName>
    <label>LEG Ref (if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>