force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Licences_to_LTU__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licences_to_LTU__c</fullName>
    <label>Licences To LTU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable-LTU will own all IP</fullName>
            </value>
            <value>
                <fullName>Licence for any purpose incl. commercial</fullName>
            </value>
            <value>
                <fullName>Licence for non-commercial research &amp; education purposes &amp; publication</fullName>
            </value>
            <value>
                <fullName>Not acceptable – seeking advice or amendments</fullName>
            </value>
            <value>
                <fullName>No licence (give detail, minimum non-commercial licence should be sought)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>