force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Licences_to_other_party_ies__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licences_to_other_party_ies__c</fullName>
    <label>Licences To Other Party/ies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>not applicable-other party will own all IP</fullName>
            </value>
            <value>
                <fullName>no licence to other party</fullName>
            </value>
            <value>
                <fullName>licence for non-commercial purposes only</fullName>
            </value>
            <value>
                <fullName>licence for any purpose incl. commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>