force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Licensing_of_IP_materials__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licensing_of_IP_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensing Of IP/Materials</label>
    <type>Checkbox</type>
</CustomField>