force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_honorary_visiting_researchers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_honorary_visiting_researchers__c</fullName>
    <label>LTU Honorary/Visiting Researchers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>