force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_Investigator2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_Investigator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead Chief Investigator</inlineHelpText>
    <label>LTU Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Legal Checklists (Lead Chief Investigator)</relationshipLabel>
    <relationshipName>Legal_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>