force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_Investigator__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_Lead_Chief_Investigator__r.FirstName &amp; &quot; &quot; &amp; I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_Lead_Chief_Investigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTU Lead Investigator</label>
    <type>Text</type>
</CustomField>