force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_partners__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_partners__c</fullName>
    <label>LTU Partners</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ONJCRI</fullName>
            </value>
            <value>
                <fullName>MDFRC</fullName>
            </value>
            <value>
                <fullName>AgriBio</fullName>
            </value>
            <value>
                <fullName>Hexima</fullName>
            </value>
            <value>
                <fullName>CAPR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>